# visual-shipping-label-test

./: README.md  pyproject.toml
doc/: approach.md
tests/: test_barcode.py  test_compare.py  test_diff.py  test_utils.py
visual_label_compare/: compare.py  diff.py  image_util.py
