[tool.poetry]
name = "visual-label-compare"
version = "0.1.0"
description = ""
authors = ["Ryan McKay <ryan.michael.mckay@gmail.com>"]
readme = "README.md"
packages = [{include = "visual_label_compare"}]

[tool.poetry.dependencies]
# changed from ^3.10 per https://github.com/python-poetry/poetry/issues/5628
python = ">=3.10,<3.12"
matplotlib = "^3.5.3"
numpy = "^1.23.3"
opencv-python = "^4.6.0.66"
scikit-image = "^0.19.3"
imutils = "^0.5.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
